# DataProcessing

./: .flake8  .isort.cfg  .pylintrc  Makefile  README.md  auto_run.sh  config.yaml  main.py  pyproject.toml  requirements.txt  run_check_before_commit.sh
.github/workflows/: project_ci.yaml
csvreader/: config.py  reader.py
csvreader/tests/: test_reader.py  test_utils.py
csvreader/tests/config/: sample_config.yaml
dataprocessor/: config.py  main.py  processor.py
dataprocessor/tests/: test_preprocessing.py  test_preprocessor.py  test_utils.py
dataprocessor/tests/config/: sample_config.yaml
